--- a/main.html
+++ b/main.html
@@ -4,10 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+        <button id="btn">Explore Now</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
