--- a/main.html
+++ b/main.html
@@ -11,7 +11,11 @@
 	<!-- the entire body must be written by student -->
 	<div class="hero">
 		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-        <button id="btn">Explore Now</button>
+        <div class="right">
+		<h1>Welcome to my Pintrest Clone</h1>
+		<p>Discover new inspiration and explore your ideas</p>
+		<button id="btn">Explore Now</button>
+	<div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
